--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/chart.js": "^2.9.41",
     "@types/jest": "^27.5.2",
+    "@types/leaflet": "^1.9.14",
     "@types/node": "^16.18.115",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
